# llm-forwarder

./: .env.examples  .gitmodules  Makefile  README.md  pyproject.toml
config/: config.yaml  models.json
docker/: Dockerfile.index-tts  build.sh  docker-compose.yml
tests/: test_openai_api.py
tests/integration/: base.py  test_handler_audio.py  test_handler_classify.py  test_handler_embed.py  test_handler_index_tts.py  test_handler_llm_tts.py  test_handler_llm_tts_errors.py  test_handler_llm_tts_v1.py  test_handler_llm_tts_v1_errors.py  test_handler_reranker.py  test_handler_root.py  test_handler_texts.py
